# cycling-tracker

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yaml
.github/workflows/: rust.yml
.sqlx/: query-0c4365a794f24b5b9535dabc3582c4777b9b9ebdc299c54a5308ae96c9c6d25b.json  query-2476faab931afaf319f157e2da91a8477bc30e9d4467b4f4a8c75c081b026667.json  query-2b3fa19fc16db2f7433a0f2164abf499ae070aadfa10fd168530045960a4f01f.json  query-2b5239867d0de1ab9f060ab58d1ad5984b7aa511cee0a05c6fc381024484fc37.json  query-c20fd238c838c6a182f558bb2ba11c28742daa673e8a08d11aea860924b3768c.json  query-dcb7899d6d96e110a972cc4ba0fe20dc944d2900b48373f9f7ec868871763ea7.json
migrations/: 20240728115625_init.down.sql  20240728115625_init.up.sql  20240729095057_remove_resistance.down.sql  20240729095057_remove_resistance.up.sql  20240801191639_user_table.down.sql  20240801191639_user_table.up.sql
proto/: cyclingtracker.proto  useless.proto
src/: app.rs  grpc.rs  lib.rs  main.rs
src/actor/: grpc.rs  mod.rs  sqlite.rs
src/api/: grpc.rs  mod.rs  sqlite.rs
src/grpc/: auth.rs  cycling_tracker.rs
src/handler/: database.rs  mod.rs  redis.rs  session.rs  sqlite.rs  user.rs  workout.rs
src/service/: auth.rs  cycling_tracker.rs  mod.rs  route_guide.rs
src/util/: data.rs
tests/: common.rs
tests/service/: mod.rs  test_auth.rs  test_cycling_tracker.rs
