[package]
name = "cycling-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
prost = "0.12"
thiserror = "1.0.62"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.11.0"
tonic-types = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
lazy_static = "1.5.0"
pretty_assertions = "1.4.0"
