[package]
name    = "cycling-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = { version = "1.0.86" }
argon2             = { version = "0.5.3" }
async-stream       = { version = "0.3.5" }
prost              = { version = "0.12" }
redis              = { version = "0.26.1", features = ["cluster-async", "tokio-comp"] }
sqlx               = { version = "0.8.0", features = ["sqlite", "runtime-tokio", "migrate"] }
testcontainers-modules = { version = "0.11.2", features = ["redis"] }
thiserror          = { version = "1.0.62" }
tokio              = { version = "1.0", features = ["rt-multi-thread", "net"] }
tokio-stream       = { version = "0.1" }
tonic              = { version = "0.11", features = ["tls"] }
tonic-reflection   = { version = "0.11.0" }
tonic-types        = { version = "0.11.0" }
tracing            = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
uuid7              = { version = "1.0.0" }

[build-dependencies]
tonic-build        = { version = "0.11" }

[dev-dependencies]
lazy_static        = { version = "1.5.0" }
pretty_assertions  = { version = "1.4.0" }
